# gen-z-alpha-translator

./: .env.example  .gitignore  MAINTAINING.md  README.md  TEAM_TODO.md  USER_MANUAL.md  app.py  pyproject.toml  serve.py  train_genz_translator.ipynb
data/processed/: eval.jsonl
data/raw/: genz_eval_heldout_grok.csv  genz_grok_synthetic.csv
data/unused/: FILTER_NOTES_augmented_1500.md  genz_dataset_augmented_1500.csv  genz_dataset_augmented_1500.dropped.csv  genz_dataset_augmented_1500.filtered.csv  genz_dataset_augmented_1500_filtered_JL.csv  genz_synthetic_dataset.csv
docs/: Group2_GenZ_Slang_Translator_Slides.pptx  slangify_mockup.html  slides_outline.md
docs/superpowers/specs/: 2026-07-15-nvidia-style-finetuning-pipeline-design.md
genz_lora_adapter/: README.md  adapter_config.json
results/: GRADING_SHEET_NOTES.txt  auto_metrics.json  auto_metrics_by_row.csv  grading_sheet.csv  grading_sheet_post_grok.csv  human_metrics.json
src/: build_grading_sheet.py  config.py  evaluate.py  fetch_urban.py  generate_pairs.py  model_load.py  prepare_data.py  score_human.py  train_lora.py  translate_core.py
src/sdg/: attributes.py  generate.py
tests/: test_attributes.py
