[project]
name = "genz-slang-translator"
version = "0.1.0"
description = "Bidirectional Gen Z/Alpha slang <-> English translator, fine-tuned from Llama 3.2 3B (QLoRA)."
requires-python = "==3.11.*"

# Core deps: needed for data preparation. These install fine on any machine (no GPU).
dependencies = [
    "pandas>=2.2",
    "openpyxl>=3.1",        # read the .xlsx sources
    "datasets>=2.19",       # load jsonl into HF Datasets for training
    "unsloth>=2026.7.2",
    "ipykernel>=6.29",      # lets VS Code / Jupyter run the notebook against this venv
    "gradio>=6.20.0",
    "fastapi>=0.115",       # local demo server (serve.py) that backs the chat mockup
    "uvicorn>=0.30",
    "requests>=2.32",       # fetch_urban.py: pull Urban Dictionary definitions
    "openai>=1.40",         # OpenAI-compatible clients (xAI Grok, Groq, NVIDIA)
    "python-dotenv>=1.0",   # load API keys from a gitignored .env
    "nltk>=3.10.0",         # METEOR in src/evaluate.py
    "bert-score>=0.3.13",   # BERTScore in src/evaluate.py
]

[project.optional-dependencies]
# Training deps: only needed on a T4 GPU (local or Colab). Installed separately
# because torch/unsloth are heavy and GPU-specific. See the notebook's install cell.
train = [
    "torch",
    "transformers>=4.44",
    "trl>=0.9",
    "peft>=0.12",
    "bitsandbytes>=0.43",
    "accelerate>=0.33",
    # unsloth is installed via its own install line on Colab (see notebook).
]

dev = [
    "pytest>=8.0",
]

[tool.uv]
# This is an application/notebook project, not an installable library, so don't
# try to build it as a package. Scripts run via `uv run python src/...`.
package = false

# Pull torch/torchvision from the CUDA 12.8 build index so they run on the
# local NVIDIA GPU (RTX 5070 / Blackwell needs cu128). Without this, uv installs
# the CPU-only wheels and the GPU is invisible. Colab ignores this (it installs
# its own stack in the notebook), so this only affects local runs.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
